@@ -69,6 +69,7 @@ function ErmZerg.make_hydraden(level)
             max_health = ERM_UnitHelper.get_building_health(hitpoint, hitpoint * max_hitpoint_multiplier, health_multiplier, level),
             order = MOD_NAME .. '/' .. name,
             subgroup = "enemies",
+            map_color = ZERG_MAP_COLOR,
             working_sound = ZergSound.building_working_sound(name, 0.75),
             dying_sound = ZergSound.building_dying_sound(0.75),
             resistances = {
