@@ -80,6 +80,7 @@ function ErmZerg.make_guardian(level)
             max_health = ERM_UnitHelper.get_health(hitpoint, hitpoint * max_hitpoint_multiplier, health_multiplier, level),
             order = MOD_NAME .. '/'  .. name .. '/' .. level,
             subgroup = "erm-flying-enemies",
+            map_color = ZERG_MAP_COLOR,
             shooting_cursor_size = 2,
             spawning_time_modifier = 2,
             resistances = {
